# cartopy-extra-tiles

./: CHANGLES.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSE.md  MANIFEST  MANIFEST.in  README.md  code.json  setup.cfg  setup.py
cartopy_extra_tiles/: __init__.py  cached_tiler.py  esri_tiles.py  scale_bar.py  stamen_tiles.py  usgs_tiles.py
test/: test_cachedtiler.py  test_esri_tiles.py  test_overlay.py  test_scalebar.py  test_stamen_tiles.py  test_usgs_tiles.py
