[egg_info]
tag_build =
tag_date = 0

[metadata]
name = cartopy_extra_tiles
version = 0.1.0
author = Brad Aagaard
author_email = baagaard@usgs.gov
description = Provide cached tiles and additional sources for tiles not included in Cartopy.
license = CC0 1.0 Universal public domain dedication
url = https://code.usgs.gov/ghsc/gmp/cartopy-extra-tiles

[options]
python_requires = >=3.7

packages = find:

zip_safe = True

include_package_data = True
